I clearly cannot algebra

--- a/11/index.htm
+++ b/11/index.htm
@@ -3,7 +3,7 @@
 // solve.htm runs out of memory before finding the solution, despite optimisations. Perhaps if I
 // wasn't using Javascript...
 // this solution is based on the observation by reddit user /u/bovard:
-// to move n items up 1 floor, it takes 2 * (n - 1) - 1 moves
+// to move n items up 1 floor, it takes 2 * n - 3 moves
 
 window.addEventListener("load", function() {
 	var part1State = [4, 5, 1, 0],
